# TccBackend

./: main.py  pyproject.toml  test.db
core/: config.py  security.py
db/: database.py  dependencies.py
enums/: ProcedureCategory.py
models/: __init__.py  clinic.py  dentist.py  endereco.py  patient.py  procedure.py  schedule.py  user.py
models/associations/: dentist_procedures.py  dentist_schedules.py
routers/: auth.py  dentist.py  dentist_schedule.py  procedure.py
schemas/: clinic.py  dentist.py  dentist_schedule.py  endereco.py  procedure.py  user.py
services/: auth_service.py  clinic_service.py  dentist_schedule_service.py  dentist_service.py  procedure_service.py
